--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,104 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --primary: hsl(193, 38%, 86%);
+  --secondary: hsl(150, 100%, 66%);
+  --grayishBlue: hsl(217, 19%, 38%);
+  --darkGrayishBlue: hsl(217, 19%, 24%);
+  --darkBlue: hsl(218, 23%, 16%);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Manrope", sans-serif;
+  font-size: 28px;
+  font-weight: 400;
+  background-color: var(--darkBlue);
+  width: 100vw;
+  min-height: 100vh;
+  position: relative;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.container {
+  background-color: var(--darkGrayishBlue);
+  border-radius: 10px;
+  padding: 3rem;
+  max-width: 550px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+
+.advice-header {
+  font-size: 1rem;
+  color: var(--secondary);
+  letter-spacing: 3px;
+  width: 100%;
+  text-align: center;
+}
+
+.advice-quote {
+  color: var(--primary);
+  margin: 1.5rem 0;
+  text-align: center;
+}
+
+.advice-divider {
+  margin-bottom: 1rem;
+}
+
+.advice-button {
+  position: absolute;
+  left: 50%;
+  bottom: -1.5rem;
+  transform: translateX(-50%);
+  border: none;
+  cursor: pointer;
+  background-color: var(--secondary);
+  width: 50px;
+  height: 50px;
+  border-radius: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.advice-button:hover {
+  outline: none;
+  filter: drop-shadow(0px 0px 20px var(--secondary));
+}
+
+.advice-button > img {
+  width: 20px;
+}
+
+.attribution {
+  position: absolute;
+  bottom: 10px;
+  left: 0;
+  width: 100vw;
+  font-size: 11px;
+  text-align: center;
+}
+.attribution a {
+  color: hsl(228, 45%, 44%);
+}
+
+@media screen and (max-width: 600px) {
+  body {
+    align-items: start;
+    padding-top: 8rem;
+  }
+
+  .container {
+    padding: 2rem;
+  }
 }
